docs: actualizado TCO y plan de pruebas

--- a/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
@@ -1,15 +1,17 @@
 ﻿---
 title: Requirements
 ---
+
 ![MUSCLEMATE](logo.png)
 
 ## Musclemate, Grupo 3
+
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                   | Descripción                       |
 | ------- | ---------- | ----------------------- | --------------------------------- |
 | v1.0    | 2024-02-14 | Analistas de requisitos | Creación del documento            |
-| v2.0    | 2024-04-14 |  Pedro González Marcos | Replanificación de los requisitos |
+| v2.0    | 2024-04-14 | Pedro González Marcos   | Replanificación de los requisitos |
 
 ## Contenido
 
@@ -197,6 +199,13 @@ Este requisito no se va a realizar porque estimamos que esta tarea
 va a suponer mucho esfuerzo al equipo de desarrollo. Queremos invertir
 más tiempo en otro tipo de tareas más prioritarias.
 
+Habría que invertir tiempo en:
+
+- Familiarizarnos con la tecnología QR
+- Buscar y decidir alternativa tecnológica para los QR
+- Desarrollar la funcionalidad
+- Probar la funcionalidad en producción
+
 Id: 10
 
 **Descripción**:
@@ -216,7 +225,14 @@ saber que progreso estoy teniendo
 
 Este requisito no se va a realizar porque estimamos que esta tarea
 va a suponer mucho esfuerzo al equipo de desarrollo. Queremos invertir
-más tiempo en otro tipo de tareas más prioritarias
+más tiempo en otro tipo de tareas más prioritarias.
+
+Habría que invertir tiempo en:
+
+- Familiarizarnos con la tecnología QR
+- Buscar y decidir alternativa tecnológica para los QR
+- Desarrollar la funcionalidad
+- Probar la funcionalidad en producción
 
 Id: 11
 
