Añadidos los planes dde marketing y de rrss #92

--- a/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
@@ -11,77 +11,38 @@ title: Lessons learnt
 | v1.0    | 2024-02-22 | Manuel Ortega | Creación del documento       |
 | v2.0    | 2024-03-15 | Manuel Ortega | Actualización del documento |
 | v3.0    | 2024-04-4 | Luis García y Manuel Ortega  | Actualización del documento |
+| v4.0    | 2024-04-22 | Alejandro Mateo Capilla | Actualización del documento |
 
 # Resumen ejecutivo
 
-Durante las distintas fases del proyecto han surgido algunos problemas que han
-sido analizados y resueltos, por ello, en este documento, se ha realizado un
-registro de las lecciones aprendidas.
+Durante las distintas fases del proyecto han surgido algunos problemas que han sido analizados y resueltos, por ello, en este documento, se ha realizado un registro de las lecciones aprendidas.
 
 ## Comunicación
 
-En el anterior entregable se observó una mala comunicación entre los distintos
-miembros del equipo y el manejo de tareas, resultando en un atraso en estas que
-llevó a que muchas se resolviese el último día. Este sprint se ha mejorado esto
-pero aun así siguen surgiendo estos problemas entre los equipos de frontend y
-backend. Sin embargo, el equipo es consciente de eso y se han planteado estrategias
-para solucionarlo de cara al siguiente sprint y comunicarse de la mejor manera posible.
+A pesar de los esfuerzos por mejorar la comunicación, aún persisten problemas entre los equipos de frontend y backend. Se debe seguir trabajando en estrategias para una comunicación más efectiva entre los equipos. Por otro lado, sí que ha sido optimizada la comunicación entre miembros de un mismo equipo de trabajo mediante el uso de GitHub.
 
-## Autonomía y colaboración
-Se hace hincapié en la importancia de ser autónomo en la realización de tareas,
-pero también en saber pedir ayuda cuando sea necesario y en trabajar de manera 
-colaborativa en equipo.
+## Compatibilidad horaria y Compromiso
+
+A lo largo del sprint, se ha evidenciado que la compatibilidad horaria entre algunos miembros del equipo ha sido un desafío, lo que ha afectado la disponibilidad y el compromiso con el proyecto. Es crucial abordar este problema para optimizar la colaboración y la productividad del equipo para el siguiente sprint.
+
 
 ## Revisar Tareas
 
-A raíz del problema anterior ocurrieron ciertos problemas a la hora de revisar tareas.
-En algunos casos el equipo de frontend, por ejemplo, se ha encontrado con que alguna
-característica del backend había sido aceptada e incluida en la rama `develop` sin
-cerciorarse de su total y correcto funcionamiento. Esto se observó durante los
-primeros días del sprint y se pudo solucionar conforme se avanzaba en el proyecto.
-Es necesario para el siguiente sprint comenzar a hacer las cosas bien desde el
-primer día para evitar problemas y retrasos posibles.
+A raíz del problema anterior ocurrieron ciertos problemas a la hora de revisar tareas. En algunos casos el equipo de frontend, por ejemplo, se ha encontrado con que alguna característica del backend había sido aceptada e incluida en la rama `develop` sin cerciorarse de su total y correcto funcionamiento. Esto se observó durante los primeros días del sprint y se pudo solucionar conforme se avanzaba en el proyecto. Es necesario para el siguiente sprint comenzar a hacer las cosas bien desde el primer día para evitar problemas y retrasos posibles.
 
-## Documentación
-Se reconoce la relevancia de una buena documentación en los proyectos, 
-tanto en la generación de documentación clara y eficiente como en la
-importancia de la documentación como código.
+## Reparto de Tareas y Gestión del Tiempo
 
-## Aprendizaje continuo
-Varios participantes mencionan la importancia
-de seguir aprendiendo nuevas tecnologías y adaptarse
-al trabajo en grupo.
+Se ha identificado que el reparto de tareas no ha sido óptimo y que la gestión del tiempo ha sido deficiente en ciertas áreas. Es esencial mejorar la asignación de tareas y dedicar tiempo suficiente a la planificación para evitar retrasos y distribuir equitativamente la carga de trabajo. Es por ello que mejoramos el reparto de tareas siendo más justo con todos los miembros del equipo y desarrollamos una fórmula que asegurarse un mínimo de tareas y un buena gestión del tiempo, debido a que si dedicas más tiempo del esperado para una tarea la fórmula penalizará en la nota de la persona responsable.
 
+## Compromiso con las Condiciones de Fallo
 
-## Priorización Nuevas Tecnologías
+Algunos integrantes del equipo no han mostrado el compromiso esperado con las condiciones de fallo de la asignatura del proyecto, lo que ha generado dificultades adicionales en el desarrollo debido al desconocimiento de algunos integrantes sobre el producto que hay que entregar al final del sprint. Se debe reforzar la importancia de cumplir con los requisitos establecidos y trabajar en equipo para alcanzar los objetivos del proyecto.
 
-El equipo debe ser más consciente de la importancia y dificultad de la aplicación
-de las nuevas tecnologías al proyecto, pues la asignación de tareas como la
-implementación del Docker fueron asignadas a un único integrante del grupo y con
-un tiempo estimado corto, cuando es fácil prever que este tipo de tareas generan
-muchos problemas, retrasos y dificultades antes las cuales según la planificación
-se debería de afrontar una única persona, siendo esta estimación bastante injusta
-y poco realista.
+## Priorización Nuevas Tecnologías​
 
-## Base de datos Django
+El equipo debe ser más consciente de la importancia y dificultad de la aplicación de las nuevas tecnologías al proyecto, pues la asignación de tareas como la implementación del Docker fueron asignadas a un único integrante del grupo y con un tiempo estimado corto, cuando es fácil prever que este tipo de tareas generan muchos problemas, retrasos y dificultades antes las cuales según la planificación se debería de afrontar una única persona, siendo esta estimación bastante injusta y poco realista.
 
-En cuanto a las tecnologías usadas, hubo ciertos problemas en cuanto a cómo se
-manejaba la base de datos de Django que, por el escaso conocimiento del grupo,
-llevó a problemas a la larga. Debido a esto y para que no suceda en el futuro el
-equipo ha decidido tomar más en cuenta este aspecto y dedicarle más tiempo a las
-tecnologías que se implementen.
+## Evaluación Continua del Rendimiento
 
-## Estimación de Tiempo
+Se destaca la importancia de realizar una evaluación continua del progreso del proyecto y estar dispuesto a realizar ajustes según sea necesario. Esto incluye la revisión periódica de la planificación, identificación de áreas de mejora y aplicación de soluciones para optimizar el rendimiento del equipo y el éxito del proyecto en general. La introducción de la nueva fórmula asegura un rendimiento continuo de todos los integrantes implicados en el proyecto.
 
-Este sprint nos ha hecho darnos cuenta de que es muy importante estimar el tiempo
-realista que puede ocupar cada tarea, y dedicarle un buen tiempo a la estimación
-del tiempo de las mismas, pues hemos sufrido de una mala estimación al principio
-del sprint, lo cual ha generado un reparto injusto de tareas basadas en el tiempo.
-
-## Priorizar las Tareas
-
-Tras el desarrollo de este sprint, en el que hemos empezado a usar la base de
-datos del backend para la programación del frontend, hemos apreciado que es de
-vital importancia la priorización de las tareas del backend. Pues las tareas de
-frontend se han visto afectadas y retrasadas por la falta de algunas de las tareas
-de backend.
