--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
@@ -12,64 +12,7 @@ title: Sprint Planning
 | ------- | ---------- | ------------------ | ------------------------ |
 | v1.0    | 2024-04-01 | Jorge Romero Limón | Creación del documento   |
 | v1.1    | 2024-04-01 | David Dana Cabello | Integración a docusaurus |
-
-## PLANIFICACIÓN SPRINT 2
-
-### 13/03 → 02/04 (Semana Santa 22/03 - 31/03)
-
-### Creación de Rutina
-
-- Dificultad: Alta
-- Tiempo estimado: 13 horas
-- 2 miembros trabajando en esta tarea
-
-### Progreso de rutina actual
-
-- Dificultad: Media
-- Tiempo estimado: 5 horas
-- 2 miembros trabajando en esta tarea
-
-### Temporizador para cada ejercicio
-
-- Dificultad: Baja
-- Tiempo estimado: 2 horas
-- 2 miembros trabajando en esta tarea
-
-### Realizar solo 1 ejercicio a la vez
-
-- Dificultad: Baja
-- Tiempo estimado: 3 horas
-- 2 miembros trabajando en esta tarea
-
-### Interfaz de clase/evento
-
-- Dificultad: Media
-- Tiempo estimado: 8 horas
-- 2 miembros trabajando en esta tarea
-
-### Añadir lista de clases/eventos
-
-- Dificultad: Baja
-- Tiempo estimado: 5 horas
-- 2 miembros trabajando en esta tarea
-
-### Apuntarse a clase/evento (solo el cliente)
-
-- Dificultad: Media
-- Tiempo estimado: 8 horas
-- 2 miembros trabajando en esta tarea
-
-### Interfaz valoración de ejercicios/máquinas
-
-- Dificultad: Media
-- Tiempo estimado: 13 horas
-- 2 miembros trabajando en esta tarea
-
-### Despliegue
-
-- Dificultad: Media
-- Tiempo estimado: 3 horas
-- 5 miembros trabajando en esta tarea
+| v1.2    | 2024-04-22 | Jorge Romero Limón | Actualizacion |
 
 ## PLANIFICACIÓN S3
 
@@ -87,11 +30,16 @@ title: Sprint Planning
 - Tiempo estimado: 8 horas
 - 4 miembros trabajando en esta tarea
 
-### Obtener datos de otro gym (premium)
+### Mejora Interfaz Usuario UI/UX
 
+- Dificultad: Media
+- Tiempo estimado: 13 horas
+- 6 miembros trabajando en esta tarea
+
+### Arreglos de Feedback
 - Dificultad: Alta
 - Tiempo estimado: 13 horas
-- 3 miembros trabajando en esta tarea
+- 5 miembros trabajando en esta tarea
 
 ### Gráficas de uso de máquinas
 
@@ -99,17 +47,16 @@ title: Sprint Planning
 - Tiempo estimado: 8 horas
 - 2 miembros trabajando en esta tarea
 
-### Gráficas de progreso del usuario (opcional)
+### Gráficas de progreso del usuario 
 
 - Dificultad: Alta
-- Tiempo estimado: 8 horas
+- Tiempo estimado: 5 horas
 - 2 miembros trabajando en esta tarea
 
-### Añadir QR identificador (Fuera del alcance)
-
-- Dificultad: Media
-- Tiempo estimado: 8 horas
-- 2 miembros trabajando en esta tarea
+### Realización de Tests
+- Dificultad: Alta
+- Tiempo estimado: 13 horas
+- 10 miembros trabajando en esta tarea
 
 ### Interfaz para gráficas de uso de máquinas y progreso del usuario
 
@@ -117,14 +64,47 @@ title: Sprint Planning
 - Tiempo estimado: 13 horas
 - 2 miembros trabajando en esta tarea
 
-### Interfaz QR (Fuera del alcance)
-
-- Dificultad: Media
-- Tiempo estimado: 13 horas
-- 2 miembros trabajando en esta tarea
-
 ### Despliegue
 
 - Dificultad: Media
+- Tiempo estimado: 1 horas
+- 3 miembros trabajando en esta tarea
+
+### Deployed Software review
+- Dificultad: Media
+- Tiempo estimado: 1 hora
+- 3 miembros trabajando en esta tarea
+
+## PLANIFICACIÓN PPL
+
+### 23/04 → 07/05
+
+### Creación de RRSS
+- Dificultad: Baja
+- Tiempo estimado: 1 hora
+- 1 miembros trabajando en esta tarea
+
+### Gestión de RRSS
+- Dificultad: Media
+- Tiempo estimado: Indefinido
+- 2 miembros trabajando en esta tarea
+
+### Planificación y Estrategia de Publicidad
+- Dificultad: Alta
 - Tiempo estimado: 3 horas
-- 5 miembros trabajando en esta tarea
+- 2 miembros trabajando en esta tarea
+
+### Creación de Material Promocional
+- Dificultad: Media
+- Tiempo estimado: 3 horas
+- 3 miembros trabajando en esta tarea
+
+### Campaña Prelanzamiento
+- Dificultad: Media
+- Tiempo estimado: 5 horas
+- 3 miembros trabajando en esta tarea
+
+### Muestreo y Acopio de Datos
+- Dificultad: Alta
+- Tiempo estimado: 5 horas
+- 4 miembros trabajando en esta tare
