--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -16,7 +16,7 @@ title: Pilot Users Performance Evaluation
 
 | Factor            | #S1 | #S2 | #S3 | #PPL | #WPL |
 |-------------------|-----|-----|-----|------|------|
-| Punctuality       | 10  |  10 |    4|      |      |
-| Feedback validity | 8   |  10 |     |      |      |
-| Feedback amount   | 8   |  10 |     |      |      |
+| Punctuality       | 10  |  10 |    5|      |      |
+| Feedback validity | 8   |  10 |   10|      |      |
+| Feedback amount   | 8   |  10 |    6|      |      |
 | Communication     | 10  |   7 |    7|      |      |
