fix: fix hero page and some mispellings

--- a/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersCommitmentAgreement anonymous people.mdx
@@ -33,7 +33,7 @@ Este documento representa un acuerdo de compromiso mutuo entre las personas anó
    - Para cualquier duda, aclaración o problema surgido durante el proceso de pruebas, las personas anónimas y el Grupo 3 se comprometen a comunicarse de manera abierta y constructiva, buscando siempre la resolución de problemas de manera colaborativa.
 
 4. **Incumplimiento:**
-   - El incumplimiento de forma reiterada por una de las partes habilita a la otra a abandornar la situación de acuerdo.
+   - El incumplimiento de forma reiterada por una de las partes habilita a la otra a abandonar la situación de acuerdo.
 
 5. **Modificaciones al Acuerdo:**
    - Cualquier modificación a este acuerdo debe ser discutida y acordada por ambas partes. Las modificaciones solo serán efectivas una vez que sean documentadas por escrito y firmadas por representantes autorizados de ambas partes.
