fix: versionado documentos

--- a/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Expected-vs-actual-situation.mdx
@@ -3,7 +3,7 @@ title: Expected vs Actual Situation
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 
 ## Historial de Versiones
 | Versión | Fecha      | Autor          | Descripción                  |
