--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/initial-plan.mdx
@@ -3,7 +3,7 @@ title: Initial planification
 ---
 ![MUSCLEMATE](../logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, DP
 ##  Historial de Versiones
 
 | Versión | Fecha       | Autor      | Descripción                            |
