--- a/MuscleMate/docs/Other-Evaluable-Docs/Testing Plan/acceptance-tests/tickets.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Testing Plan/acceptance-tests/tickets.mdx
@@ -5,7 +5,7 @@ title: Tickets
 
 ![MUSCLEMATE](../../logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 ## Historial de versiones
 
 | Versión | Fecha      | Autor                  | Descripción            |
