--- a/MuscleMate/docs/Other-Evaluable-Docs/Testing Plan/acceptance-tests/users.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Testing Plan/acceptance-tests/users.mdx
@@ -3,7 +3,7 @@ title: Usuarios (Propietario)
 ---
 ![MUSCLEMATE](../../logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 
 ## Historial de versiones
 
