--- a/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/problems.mdx
@@ -3,7 +3,7 @@ title: Problems, Solutions and Metrics
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 ## Historial de versiones
 
 | Versión | Fecha      |Autor   | Diferencia entre versiones    |
