--- a/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/requirements.mdx
@@ -4,7 +4,7 @@ title: Requirements
 
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 
 ## Historial de versiones
 
