--- a/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/tco.mdx
@@ -4,22 +4,22 @@ title: Total Cost Ownership (TCO)
 
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 
 ## Historial de versiones
 
-| Versión | Fecha      | Diferencia entre versiones                       |
-| ------- | ---------- | ------------------------------------------------ |
-| 1.0     | 2024-02-08 | Versión inicial del documento                    |
-| 2.0     | 2024-02-09 | Finalización del documento                       |
-| 3.0     | 2024-02-10 | Corrección del documento                         |
-| 4.0     | 2024-02-15 | Correción del documento                          |
-| 5.0     | 2024-02-16 | Correción del documento                          |
-| 6.0     | 2024-02-22 | Correción del documento                          |
-| 7.0     | 2024-03-01 | Correción del documento                          |
-| 8.0     | 2024-04-01 | Graficas TCO y Calculos                          |
-| 9.0     | 2024-04-01 | Agregados costes de SLA                          |
-| 10.0    | 2024-04-21 | Reestructuración documento y añadir roles nuevos |
+| Versión | Fecha      | Autor                  | Diferencia entre versiones                       |
+| ------- | ---------- | ---------------------- | ------------------------------------------------ |
+| 1.0     | 2024-02-08 | González Marcos, Pedro y Dana Cabello, David | Versión inicial del documento                    |
+| 2.0     | 2024-02-09 | González Marcos, Pedro y Dana Cabello, David | Finalización del documento                       |
+| 3.0     | 2024-02-10 | González Marcos, Pedro | Corrección del documento                         |
+| 4.0     | 2024-02-15 | González Marcos, Pedro | Correción del documento                          |
+| 5.0     | 2024-02-16 | González Marcos, Pedro | Correción del documento                          |
+| 6.0     | 2024-02-22 | González Marcos, Pedro | Correción del documento                          |
+| 7.0     | 2024-03-01 | González Marcos, Pedro | Correción del documento                          |
+| 8.0     | 2024-04-01 | González Marcos, Pedro | Graficas TCO y Calculos                          |
+| 9.0     | 2024-04-01 | Juan Carlos Moreno Pérez  | Agregados costes de SLA                          |
+| 10.0    | 2024-04-21 | González Marcos, Pedro | Reestructuración documento y añadir roles nuevos |
 
 ## 1. Introducción
 
