--- a/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
+++ b/MuscleMate/docs/Pilots/pilotUsersPerformanceEvaluation.mdx
@@ -3,13 +3,13 @@ title: Pilot Users Performance Evaluation
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 ##  Historial de Versiones
 | Versión | Fecha       | Autor      | Descripción                            |
 |---------|-------------|------------|----------------------------------------|
 | v1.0    | 2024-04-01  | David Dana Cabello   | Creación del documento                 |
 | v2.0    | 2024-04-03  | Ángel Muñoz Prieto | Actualización con S2           |
-
+| v3.0    | 2024-04-22  | Ángel Muñoz Prieto | Actualización con S3           |
 
 
 ## PILOT USER ISSP GROUP NUMBER: 9
