--- a/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/Planificaction/sprintPlanning.mdx
@@ -4,7 +4,7 @@ title: Sprint Planning
 
 ![MUSCLEMATE](../logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 
 ## Historial de Versiones
 
