--- a/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/docs-api.mdx
@@ -3,7 +3,7 @@ title: Documentación de la API de MuscleMate
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 2
 ##  Historial de Versiones
 
 
