--- a/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
+++ b/MuscleMate/docs/Other-Evaluable-Docs/lessons-learnt.mdx
@@ -3,7 +3,7 @@ title: Lessons learnt
 ---
 ![MUSCLEMATE](logo.png)
 
-## Musclemate, Grupo 3
+## Musclemate, Grupo 3, Sprint 3
 ## Historial de versiones
 
 | Versión | Fecha      | Autor          | Descripción                  |
